resolvendo warnings